plugins {
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'java'
    id 'application'
}

mainClassName = "fr.irwin.uge.UGEBot"

group 'fr.irwin'
version '2.4.1'

sourceCompatibility = 15

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'

    compile 'net.dv8tion:JDA:4.2.0_208'
    compile 'com.google.code.gson:gson:2.8.5'
    compile 'org.slf4j:slf4j-api:1.7.2'
    compile 'ch.qos.logback:logback-classic:1.0.9'
    compile 'ch.qos.logback:logback-core:1.0.9'
    compile 'com.google.guava:guava:28.0-jre'
    compile 'org.json:json:20200518'
    compile 'org.redisson:redisson:3.13.5'
    compile 'org.simplejavamail:simple-java-mail:4.1.1'
}

shadowJar {
    configurations = [project.configurations.compile]
}

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.incremental = true
}
